Closed
Bug 1415416
Opened 8 years ago
Closed 8 years ago
Problem with cursor, it doesn't appear on focused textbox
Categories
(Core :: DOM: Editor, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox56 | --- | wontfix |
| firefox57 | --- | wontfix |
| firefox58 | --- | wontfix |
| firefox59 | --- | verified |
People
(Reporter: hunglech, Assigned: m_kato)
References
Details
(Keywords: regression)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.89 Safari/537.36
Steps to reproduce:
When i change readOnly and value in texbox and press tab key the cursor does not appear on focused textbox
Actual results:
Ex:
https://jsfiddle.net/b2y7horx/
When focus on text1 and press tabkey, it focus on text2 but the cursor does not show
Expected results:
The cursor appear on textbox
Thank you FF team
Comment 1•8 years ago
|
||
I didn't see this in 55, seems a regression after that somewhere.
Updated•8 years ago
|
Keywords: regression,
regressionwindow-wanted
Comment 2•8 years ago
|
||
This is the regression-window https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9af23c413a1f8d337b19b4f8450e241e91b71136&tochange=d2aff6fc075dc4a0e5ca5b4cf7d530979942d4b4
I failed to determine a specific commit which may cause this. Could you take a look at the window and see if you have thoughts about which seems suspicious, Jessica?
Updated•8 years ago
|
status-firefox56:
--- → affected
status-firefox57:
--- → affected
status-firefox58:
--- → affected
status-firefox-esr52:
--- → unaffected
Version: 58 Branch → 56 Branch
Comment 3•8 years ago
|
||
Regressed by: c46231bce5bc Makoto Kato — Bug 1375910 - Don't remove text node when setting value is empty string. r=masayuki
:m_kato
Your patch seems cause the regression. Can you look into this?
Updated•8 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → m_kato
Flags: needinfo?(m_kato)
| Assignee | ||
Updated•8 years ago
|
Updated•8 years ago
|
Flags: needinfo?(jjong)
| Assignee | ||
Comment 4•8 years ago
|
||
It seems to call collapse in this case. But it might cause performance regression.
| Assignee | ||
Comment 5•8 years ago
|
||
nsTextControlFrame::SelectAllOrCollapseToEndOfText won't detect that text is empty. So we should add logic to detect empty correctly or use nsIEditor's method.
| Assignee | ||
Comment 6•8 years ago
|
||
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 9•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8941772 [details]
Bug 1415416 - Part 1. Collapse selection on focus when value is empty.
https://reviewboard.mozilla.org/r/212020/#review218078
Attachment #8941772 -
Flags: review?(masayuki) → review+
Comment 10•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8941773 [details]
Bug 1415416 - Part 2. Add test.
https://reviewboard.mozilla.org/r/212022/#review218080
Attachment #8941773 -
Flags: review?(masayuki) → review+
Comment 11•8 years ago
|
||
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/e77e0779441a
Part 1. Collapse selection on focus when value is empty. r=masayuki
https://hg.mozilla.org/integration/autoland/rev/02e365e09e79
Part 2. Add test. r=masayuki
Comment 12•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e77e0779441a
https://hg.mozilla.org/mozilla-central/rev/02e365e09e79
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment 13•8 years ago
|
||
Not a new issue, we're at RC week => wontfix for 58.
Updated•8 years ago
|
Updated•8 years ago
|
Flags: qe-verify+
Comment 14•8 years ago
|
||
I have reproduced this issue using Firefox 58.0a1 (2017.11.07) on Win 8.1 x64.
I can confirm this issue is fixed, I verified using Firefox 59.0b5 on Win 8.1 x64 and Mac OS X 10.13.2 and Ubuntu 14.04 x64.
You need to log in
before you can comment on or make changes to this bug.
Description
•