Bug 1415416 - Part 1. Collapse selection on focus when value is empty. r=masayuki

After landing bug 1375910, input.value = "" doesn't remove inter text node.
When value is empty, SelectAllOrCollapseToEndOfText will set selection to
end of text.  But since empty text node is still exist, it select all nodes,
instead of collapsed.  So if text node is empty, we should collapse selection.

MozReview-Commit-ID: Gm0AP6YSJIg

--HG--
extra : rebase_source : fa7ecda9761f1e202b0a4600968c2e1151220fc3